--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
 
     - name: Build React App
       run: npm run build
+      env:
+        CI: false
 
     - name: Deploy via FTP
       uses: samkirkland/ftp-deploy-action@v4.3.4
