--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,3 +35,5 @@ jobs:
         port: 21
         local-dir: build/
         server-dir: public_html/   # Adjust to your target directory
+        timeout: 120000
+        security: 'loose'
